00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abstracta
  labels:
    app.kubernetes.io/name: abstracta
