03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abstracta-demo-service
  namespace: abstracta-tecnica
  labels:
    app.kubernetes.io/name: abstracta-demo
    environment: production
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: abstracta-demo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
