04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: abstracta-tecnica
  labels:
    app.kubernetes.io/name: web-app
    app.kubernetes.io/component: frontend
  annotations:
    # Indica qué controller de ingress debe procesar este recurso
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-svc
                port:
                  name: http
